<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".TimeSelectionFragment">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/black"
            android:elevation="5dp">
            <ImageButton
                android:id="@+id/back_button"
                android:src="@drawable/ic_baseline_arrow_left_24"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/back_button"
                android:scaleType="fitCenter"
                android:padding="10dp"
                android:background="@android:color/transparent"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/select_time_title"
                android:textColor="@color/white"
                android:gravity="center"
                android:textSize="25sp"/>
            <ImageButton
                android:src="@drawable/ic_baseline_account_circle_24"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/login"
                android:scaleType="fitCenter"
                android:padding="10dp"
                android:background="@android:color/transparent"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <TextView
            android:id="@+id/level_name"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="25sp"/>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:layout_gravity="center">
            <ImageView
                android:id="@+id/level_image"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintDimensionRatio="1:1"
                android:padding="20dp"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/time_set_dialog"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_gravity="center">
            <ImageView
                android:id="@+id/timer_icon"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintDimensionRatio="1:1"
                android:src="@drawable/ic_baseline_av_timer_24"
                android:padding="10dp"
                />
            <View
                android:id="@+id/vertical_separator"
                android:layout_width="2dp"
                android:layout_height="0dp"
                android:background="@color/pink_600"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@id/timer_icon"
                />
            <NumberPicker
                android:id="@+id/minutes_picker"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintLeft_toRightOf="@id/vertical_separator"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="1"
                android:layout_marginStart="10dp"
                android:theme="@style/NumberPickerText"
                android:descendantFocusability="blocksDescendants"
                />
            <TextView
                android:id="@+id/minutes_label"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                app:layout_constraintLeft_toRightOf="@id/minutes_picker"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginStart="10dp"
                android:textSize="20sp"
                android:text="@string/minute_label"
                android:gravity="center"/>
            <NumberPicker
                android:id="@+id/seconds_picker"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintLeft_toRightOf="@id/minutes_label"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="1"
                android:layout_marginStart="10dp"
                android:theme="@style/NumberPickerText"
                android:descendantFocusability="blocksDescendants"
                />
            <TextView
                android:id="@+id/seconds_label"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                app:layout_constraintLeft_toRightOf="@id/seconds_picker"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginStart="10dp"
                android:textSize="20sp"
                android:text="@string/second_label"
                android:gravity="center"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="10dp">
            <TextView
                android:id="@+id/start_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/pink_600"
                android:text="@string/start_game_button_label"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:gravity="center"
                />
        </LinearLayout>
    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>